[package]
name = "portfolio_explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3.7"
tokio = { version = "1.44.1", features = ["full"] }
ethers = "2.0.14"
serde_json = "1.0.140"
chrono = "0.4.40"
prometheus = "0.13.4"
async-trait = "0.1.88"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
tendermint-rpc = { version = "0.40.1", features = ["http-client"] }
cosmos-sdk-proto = { version = "0.26.1", features = ["cosmwasm"] }
tonic = "0.12.3"
bytes = "1.10.1"
futures = "0.3.31"

jaq-json = { version = "1.1.1", features = ["serde_json"] }
jaq-core = "2.1.1"
jaq-std = "2.1.0"
